# isagog-userauth

./: .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  pytest.ini  tox.ini  users.db
.github/workflows/: buildtestdocker.yml
isagog_userauth/: base.py  config.py  custom_exceptions.py  database.py  db_session.py  main.py  models.py  schemas.py  utils.py
isagog_userauth/routers/: user.py
isagog_userauth/utils/: gencrypt.py
tests/: test_login.py
