[tool.poetry]
name = "isagog-userauth"
version = "0.1.1"
description = "A FastAPI project to manage users and issue JWT tokens to control access"
authors = ["Robert Alexander <gogonegro@gmail.com>"]
readme = "README.md"
#packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
tox = "^4.15.1"
ruff = "^0.4.8"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
